# chunked-ed

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/chunked_ed/: __init__.py  core.py
